--- a/wp-content/themes/osteo/assets/sass/_variables.scss
+++ b/wp-content/themes/osteo/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$beige : #f9f5e9;
-$black : #000;
+$blueClear : #b4d5de;
+$blueDark : #1d4154;
 
 // Fonts
 $serif_thin_italic : 'larkenthin_italic';
