--- a/wp-content/themes/osteo/assets/sass/_commons.scss
+++ b/wp-content/themes/osteo/assets/sass/_commons.scss
@@ -1,31 +1,7 @@
-.serif{
-  font-family: $serif_thin;
-
-  &.italic{
-    font-family: $serif_thin_italic;
-  }
-}
-
-
-.sans-serif{
-  font-family: $sans_serif_regular;
-
-
-  &.light{
-    font-family: $sans_serif_thin;
-  }
-
-  &.italic{
-    font-family: $sans_serif_thin_italic;
-    -webkit-font-smoothing : auto;
-  }
-}
-
-
 .title{
   &.big{
-    font-size: 12.7vw;
-    line-height: 11.5vw;
+    font-size: 30px;
+    line-height: 40px;
     //line-height: 220px;
   }
 }
@@ -35,85 +11,102 @@
   text-transform: uppercase;
 }
 
-.small{
-  font-size: 14px;
+
+
+.title{
+  text-transform: uppercase;
+  &.big{
+    font-size: 65px;
+    line-height: 70px;
+    font-weight: 600;
+  }
+  &.medium{
+    font-weight: 600;
+    color: $blueDark;
+    letter-spacing: .03em;
+    font-size: 16px;
+    margin-bottom: 5px;
+
+    &.white{
+      color: #FFF;
+    }
+  }
+
+  &.big-medium{
+    font-size: 45px;
+    font-weight: 600;
+    color: $blueClear;
+    line-height: 50px;
+    margin-bottom: 30px;
+  }
 }
-
-.has-border{
-  border-bottom: 10px solid $black;
-  display: inline-block;
-
-}
-
 
 
 // Color
 
-.color-beige{
-  color: $beige;
+.color-blue-clear{
+  color: $blueClear;
 }
 
-.background-beige{
-  background: $beige;
+.background-blue-dark{
+  background: $blueDark;
+}
+
+.text-medium{
+  font-size: 16px;
+  color: #888;
+}
+
+.white{
+  color: #FFF;
+}
+
+.link{
+  color: $blueDark;
+  font-weight: 600;
+  font-size: 15px;
+
+  &.white{
+    color: #FFF;
+  }
+}
+
+.button{
+  background: #89b4c0;
+  font-size: 14px;
+  color: #FFF;
+  font-weight: 600;
+  padding: 12px 30px;
+  display: inline-block;
+}
+
+.slider{
+  .slick-dots{
+    //margin-top: 30px;
+    bottom: auto;
+    li{
+      margin: 0;
+      button{
+        width: 12px;
+        height: 12px;
+        padding: 0;
+        margin: 0 auto;
+        border-radius: 50%;
+        border: 1px solid $blueClear;
+
+        &:before{
+          display: none;
+        }
+      }
+
+      &.slick-active{
+        button{
+          background: $blueClear;
+        }
+      }
+    }
+  }
 }
 
 
-
-// Checkbox
-
-.container-checkbox{
-  position: relative;
-}
-[type="checkbox"] {
-  position: absolute;
-  left: 0;
-  opacity: 0.01;
-}
-
-[type="checkbox"] + label {
-  position: relative;
-  padding-left: 27px;
-  cursor: pointer;
-}
-
-[type="checkbox"]:not(:checked) + label::before,
-[type="checkbox"]:checked + label::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 5px;
-  width: 16px;
-  height: 10px;
-  border: 1px solid #171717;
-  background: transparent;
-  border-radius: 5px;
-  transition: all .275s;
-}
-
-/* Aspect de la coche */
-[type="checkbox"]:not(:checked) + label::after,
-[type="checkbox"]:checked + label::after {
-  content: '';
-  position: absolute;
-
-  width: 6px;
-  height: 6px;
-  background: #171717;
-  left: 2px;
-  top: 7px;
-  border-radius: 50%;
-  transition: .2s ease-in-out;
-  will-change: transform;
-}
-
-/* Aspect non cochée */
-[type="checkbox"]:not(:checked) + label::after {
-
-}
-
-/* Aspect cochée */
-[type="checkbox"]:checked + label::after {
-  opacity: 1;
-  transform: translate3D(6px, 0, 0);
-}
 
