--- a/wp-content/themes/osteo/assets/sass/_components.scss
+++ b/wp-content/themes/osteo/assets/sass/_components.scss
@@ -1,84 +1,192 @@
-.image-follow{
+.intro-page{
   position: relative;
-  display: block;
-  .follow-image{
-    display: none;
-    position: absolute;
-  }
-
-  &:hover{
-    .follow-image{
-      display: block;
-    }
-  }
-}
-
-
-.button-round{
-  width: 180px;
-  height: 180px;
-  position: relative;
-  border: 0;
-  display: inline-block;
-  background: transparent;
-
-  &.white{
-    color: #FFF;
-    .round{
-      border-color: #FFF;
-    }
-  }
-
-  .round{
+  border-top: 10px solid $blueClear;
+  background-size: cover;
+  &:before{
+    content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 1px solid $black;
-    will-change: transform;
-    border-radius: 50%;
-    top: 0;
-    left: 0;
-    transition: .2s;
+    background: rgb(29,65,84);
+    background: linear-gradient(0deg, rgba(255,255,255,0.3) 0%, rgba(29,65,84,1) 100%);
+  }
 
-    &.is-hover{
-      transition: 0s;
+  .text-content{
+    padding-top: 320px;
+    color: #FFF;
+
+    p{
+      margin-bottom: 0;
+    }
+  }
+
+  .container-text-hero{
+    background: #FFF;
+    border-top: 10px solid $blueClear;
+    padding: 60px;
+    margin-top: 20px;
+    z-index: 3;
+    position: relative;
+    box-shadow: 0px 15px 30px rgba(#000, .1);
+
+    .text-text-hero{
+      min-height: 95px;
+      padding-right: 30px;
+      font-size: 15px;
+      line-height: 20px;
+    }
+  }
+
+  &.home{
+    &:after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      left: 0;
+      height: 80px;
+      background: #FFF;
     }
   }
 }
 
 
-button.navigation{
-  width: 70px;
-  height: 70px;
-  border: 1.1px rgba(0,0,0,0.13) solid;
-  border-radius: 80px;
-  background: transparent;
+.push-presentation{
   position: relative;
-  display: inline-block;
-  margin-top: -4px;
-
-  &:before{
-    content: 'Menu';
-    font-family: $sans_serif_regular;
-    font-size: 14px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: calc(100% + 20px);
+  img{
+    width: 100%;
   }
 
-  .bar{
-    width: 11px;
-    height: 1px;
-    background: #000;
+  &:before{
+    content: '';
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: 31px;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: 0;
+    background: rgb(29,65,84);
+    background: linear-gradient(180deg, rgba(255,255,255,0.1) 0%, rgba(0,0,0,.7) 100%);;
+  }
+  .push-presentation-content{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+    padding: 40px;
 
-    &:last-child{
-      top: auto;
-      bottom: 31px;
+    .title{
+      font-size: 18px;
+    }
+    .text-medium{
+      margin-bottom: 10px;
+    }
+    p{
+      margin-bottom: 0;
+    }
+  }
+}
+
+
+.section.discover{
+  position: relative;
+  padding: 90px 0;
+
+  .text-medium{
+    color: rgba(#FFF, .8);
+    text-align: justify;
+  }
+  &:before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba($blueDark, .9);
+    top: 0;
+    left: 0;
+  }
+
+  .image-width-bg{
+    text-align: right;
+  }
+
+  .button{
+    margin-top: 10px;
+  }
+}
+
+.section{
+  margin-top: 60px;
+}
+
+.slider-tasty{
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+  position: relative;
+
+  .slick-dots{
+    margin-top: 10px;
+  }
+
+  &:before{
+    content: '“';
+    position: absolute;
+    left: -50px;
+    font-size: 120px;
+    color: #f2f2f2;
+    font-family: Serif;
+    top: 0;
+    line-height: 0;
+  }
+
+  &:after{
+    content: '“';
+    position: absolute;
+    right: -50px;
+    font-size: 120px;
+    color: #f2f2f2;
+    font-family: Serif;
+    bottom: 30px;
+    transform: rotate(180deg);
+    line-height: 0;
+  }
+
+  .post{
+    font-size: 15px;
+    color: $blueDark;
+  }
+
+  .text{
+    position: relative;
+  }
+
+  .title.medium{
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+}
+
+
+footer{
+  background: $blueDark;
+  padding: 30px;
+  margin-top: 60px;
+
+  img{
+    max-width: 102px;
+  }
+  .navigation-footer{
+    text-align: center;
+    padding-top: 20px;
+    li{
+      display: inline-block;
+      padding: 0 15px;
+      a{
+        color: #FFF;
+        text-transform: uppercase;
+        font-size: 13px;
+        letter-spacing: .03em;
+        font-weight: 600;
+      }
     }
   }
 }
