--- a/wp-content/themes/osteo/assets/sass/_components.scss
+++ b/wp-content/themes/osteo/assets/sass/_components.scss
@@ -2,6 +2,7 @@
   position: relative;
   border-top: 10px solid $blueClear;
   background-size: cover;
+  background-position: center;
   &:before{
     content: '';
     position: absolute;
@@ -46,6 +47,18 @@
       left: 0;
       height: 80px;
       background: #FFF;
+    }
+  }
+
+
+  &.not-home{
+    .text-content{
+      padding: 180px 0 80px;
+      text-align: center;
+
+      .description-intro{
+        font-size: 16px;
+      }
     }
   }
 }
