--- a/wp-content/themes/osteo/assets/stylesheets/style.css
+++ b/wp-content/themes/osteo/assets/stylesheets/style.css
@@ -12194,24 +12194,37 @@ a.text-dark:focus, a.text-dark:hover {
   font-size: 16px;
   color: #888;
 }
+/* line 61, ../sass/_commons.scss */
+.text-medium ul li:before {
+  content: '•';
+  margin-right: 10px;
+}
+/* line 68, ../sass/_commons.scss */
+.text-medium h2 {
+  font-weight: 600;
+  color: #1d4154;
+  letter-spacing: .03em;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
 
-/* line 60, ../sass/_commons.scss */
+/* line 77, ../sass/_commons.scss */
 .white {
   color: #FFF;
 }
 
-/* line 64, ../sass/_commons.scss */
+/* line 81, ../sass/_commons.scss */
 .link {
   color: #1d4154;
   font-weight: 600;
   font-size: 15px;
 }
-/* line 69, ../sass/_commons.scss */
+/* line 86, ../sass/_commons.scss */
 .link.white {
   color: #FFF;
 }
 
-/* line 74, ../sass/_commons.scss */
+/* line 91, ../sass/_commons.scss */
 .button {
   background: #89b4c0;
   font-size: 14px;
@@ -12221,15 +12234,15 @@ a.text-dark:focus, a.text-dark:hover {
   display: inline-block;
 }
 
-/* line 84, ../sass/_commons.scss */
+/* line 101, ../sass/_commons.scss */
 .slider .slick-dots {
   bottom: auto;
 }
-/* line 87, ../sass/_commons.scss */
+/* line 104, ../sass/_commons.scss */
 .slider .slick-dots li {
   margin: 0;
 }
-/* line 89, ../sass/_commons.scss */
+/* line 106, ../sass/_commons.scss */
 .slider .slick-dots li button {
   width: 12px;
   height: 12px;
@@ -12238,11 +12251,11 @@ a.text-dark:focus, a.text-dark:hover {
   border-radius: 50%;
   border: 1px solid #b4d5de;
 }
-/* line 97, ../sass/_commons.scss */
+/* line 114, ../sass/_commons.scss */
 .slider .slick-dots li button:before {
   display: none;
 }
-/* line 103, ../sass/_commons.scss */
+/* line 120, ../sass/_commons.scss */
 .slider .slick-dots li.slick-active button {
   background: #b4d5de;
 }
@@ -12301,7 +12314,7 @@ a.text-dark:focus, a.text-dark:hover {
 }
 /* line 55, ../sass/_components.scss */
 .intro-page.not-home .text-content {
-  padding: 180px 0 80px;
+  padding: 220px 0 220px;
   text-align: center;
 }
 /* line 59, ../sass/_components.scss */
@@ -12962,6 +12975,11 @@ section.iframe iframe {
 /* line 94, ../sass/_strates.scss */
 .section-form-resa {
   padding-top: 60px;
+}
+
+/* line 99, ../sass/_strates.scss */
+.strate-separator {
+  margin-top: 50px;
 }
 
 /* line 1, ../sass/_forms.scss */
